--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.3.3
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.7
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
