--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.7
   package_info_plus: ^8.0.2
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  firebase_messaging: ^15.1.3
+  firebase_analytics: ^11.3.3
+  google_maps_flutter: ^2.2.5
 
 dev_dependencies:
   flutter_test:
