--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
 
 flutter_launcher_icons:
-
-#  android: "launcher_icon"
-#  ios: "AppIcon"
-  android: true
-  ios: true
+  android: "launcher_icon"
+  ios: "AppIcon"
   image_path: "assets/icons/icon.png"
   min_sdk_android: 21
   remove_alpha_ios: true
