--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_messaging: ^15.1.3
   firebase_analytics: ^11.3.3
   google_maps_flutter: ^2.2.5
+  geolocator: ^13.0.2
+  adaptive_dialog: ^2.3.0
 
 dev_dependencies:
   flutter_test:
