--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,30 +28,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
+  adaptive_dialog: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  provider: ^6.0.3
-  intl: ^0.19.0
   dio: ^5.3.3
-  shared_preferences: ^2.2.0
-  flutter_svg: ^2.0.7
-  package_info_plus: ^8.0.2
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
-  firebase_messaging: ^15.1.3
   firebase_analytics: ^11.3.3
-  google_maps_flutter: ^2.2.5
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  flutter:
+    sdk: flutter
+  flutter_svg: ^2.0.7
   geolocator: ^13.0.2
-  adaptive_dialog: ^2.3.0
+  google_maps_flutter: ^2.2.5
+  intl: ^0.19.0
+  material_design_icons_flutter: ^7.0.7296
+  package_info_plus: ^8.0.2
+  provider: ^6.0.3
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: ^0.14.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,7 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.14.1
+  flutter_test:
+    sdk: flutter
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -70,7 +70,6 @@ flutter_launcher_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -96,13 +95,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
