--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   package_info_plus: ^8.0.2
   provider: ^6.0.3
   shared_preferences: ^2.2.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
