--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  connectivity_plus: ^6.1.1
   cupertino_icons: ^1.0.8
-  dio: ^5.3.3
+  device_info_plus: ^11.2.0
+  dio: ^5.7.0
   firebase_analytics: ^11.3.3
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
