--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.2.0
   dio: ^5.7.0
+  dropdown_search: ^6.0.1
   firebase_analytics: ^11.3.3
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   flutter:
     sdk: flutter
+  flutter_searchable_dropdown: ^2.0.0
   flutter_svg: ^2.0.7
   geolocator: ^13.0.2
   google_maps_flutter: ^2.2.5
