--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: ^3.4.1
   connectivity_plus: ^6.1.1
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.2.0
