--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Need camera access to take photos</string>
 	<key>CFBundleDisplayName</key>
 	<string>TGNPDCL</string>
 	<key>CFBundleExecutable</key>
