--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,11 @@ dependencies:
   flutter_svg: ^2.0.7
   geolocator: ^13.0.2
   google_maps_flutter: ^2.2.5
+  image_picker: ^1.1.2
   intl: ^0.20.1
   material_design_icons_flutter: ^7.0.7296
   package_info_plus: ^8.0.2
+  permission_handler: ^11.4.0
   pinput: ^5.0.1
   provider: ^6.0.3
   shared_preferences: ^2.2.0
