--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   pinput: ^5.0.1
   provider: ^6.0.3
   shared_preferences: ^2.2.0
+  sqflite: ^2.4.1
   url_launcher: ^6.3.1
   webview_flutter: ^4.10.0
 
