[Surya] 2025-May-05 - Dashboard corrections and ui things

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
     <application
-        android:label="TGNPDCL"
+        android:label="NPDCL EMPLOYEE"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         android:usesCleartextTraffic="true"
