--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   dropdown_search: ^6.0.1
   firebase_analytics: ^11.3.3
   firebase_auth: ^5.3.1
-  firebase_core: ^3.6.0
+  firebase_core: ^3.13.0
   firebase_messaging: ^15.1.3
   fl_chart: ^0.70.2
   flutter:
@@ -62,6 +62,7 @@ dependencies:
   webview_flutter: ^4.10.0
 
 dev_dependencies:
+  change_app_package_name: ^1.5.0
   flutter_launcher_icons: ^0.14.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
