--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCDwWFkz1FouRxZBYnAmxnkO_XPVO_ICls</string>
+	<string>AIzaSyDXbi8KsBUhIcRnQuZ9XOScLUe_2BeQyXs</string>
 	<key>GCM_SENDER_ID</key>
-	<string>744583032069</string>
+	<string>1086526059926</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.aits.tsnpdclEmployee</string>
+	<string>in.tsnpdcl.npdclemployee</string>
 	<key>PROJECT_ID</key>
-	<string>aits-tsnpdcl-employee</string>
+	<string>npdclemployee</string>
 	<key>STORAGE_BUCKET</key>
-	<string>aits-tsnpdcl-employee.firebasestorage.app</string>
+	<string>npdclemployee.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:744583032069:ios:76ec32d4c401b811721b6c</string>
+	<string>1:1086526059926:ios:99782bd7dc4075543f19b7</string>
+	<key>DATABASE_URL</key>
+	<string>https://npdclemployee.firebaseio.com</string>
 </dict>
 </plist>
