--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   adaptive_dialog: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class for iOS style icon.
   cached_network_image: ^3.4.1
   connectivity_plus: ^6.1.1
   cupertino_icons: ^1.0.8
@@ -77,7 +77,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: "AppIcon"
-  image_path: "assets/icons/icon.png"
+  image_path: "assets/icon/icon.png"
   min_sdk_android: 21
   remove_alpha_ios: true
 
@@ -87,12 +87,12 @@ flutter_launcher_icons:
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
+  # included with your application, so that you can use the icon in
   # the material Icons class.
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/icons/
+    - assets/icon/
   fonts:
     - family: Inter
       fonts:
