--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <application
         android:label="tsnpdcl_employee"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:usesCleartextTraffic="true"
+        android:icon="@mipmap/launcher_icon"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".MainActivity"
             android:exported="true"
