--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_searchable_dropdown: ^2.0.0
   flutter_svg: ^2.0.7
   geolocator: ^13.0.2
+  google_maps_cluster_manager_2: ^3.2.0
   google_maps_flutter: ^2.2.5
   image_picker: ^1.1.2
   intl: ^0.20.1
