--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ create_online.txt
 imp_code.txt
 create_dtr_offline.txt
 repeted_failure_report_dtr_failure.txt
+online_collection_sai_viewmodel.txt
