--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,6 +55,8 @@
     <string>We need your location to provide better services.</string>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+    <key>GMSApiKey</key>
+    <string>AIzaSyDXbi8KsBUhIcRnQuZ9XOScLUe_2BeQyXs</string>
     <key>LSApplicationQueriesSchemes</key>
     <array>
       <string>http</string>
