--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   sqflite: ^2.4.1
   url_launcher: ^6.3.1
   webview_flutter: ^4.10.0
+  mobile_scanner: ^7.0.1
 
 dev_dependencies:
   change_app_package_name: ^1.5.0
