Bhavana [24-06-2025] Daily Nil Report, ERO Correspondence

--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,5 @@ app.*.map.json
 /android/app/release
 
 #bhavana
-create_online.txt
 imp_code.txt
-create_dtr_offline.txt
-repeted_failure_report_dtr_failure.txt
-online_collection_sai_viewmodel.txt
+imp_code_part_2.txt
