--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   url_launcher: ^6.3.1
   webview_flutter: ^4.10.0
   mobile_scanner: ^7.0.1
+  file_picker: ^10.2.0
 
 dev_dependencies:
   change_app_package_name: ^1.5.0
